Part_2/azure-vote-part2-final.yaml
# Deployment of Redis
apiVersion: apps/v1
kind: Deployment
metadata:
  name: az-redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis-azure
  template:
    metadata:
      labels:
        app: redis-azure
    spec:
      volumes:
        - name: red-vol
          csi:
            driver: file.csi.azure.com
            readOnly: false
            volumeAttributes:
              secretName: storage-secret  # required
              shareName: b6d-redis-fileshare  # required
      containers:
      - name: redis
        image: redis:latest
        args: ["--requirepass", "$(REDIS_PWD)"]
        volumeMounts:
        - name: red-vol
          mountPath: /data
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 250m
            memory: 256Mi
        ports:
        - containerPort: 6379
          name: redis
---
# Service for Redis (Cluster IP)
apiVersion: v1
kind: Service
metadata:
  name: redis-service
spec: # Par default le type est ClusterIP, il n'y a aucun raison de le spécifier (type: ClusterIP)
  ports:
  - port: 6379
  selector:
    app: redis-azure
---
# Deployment of Voting App
apiVersion: apps/v1
kind: Deployment
metadata:
  name: az-voteapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: votingapp-azure
  template:
    metadata:
      labels:
        app: votingapp-azure
    spec:
      nodeSelector:
        "kubernetes.io/os": linux
      containers:
      - name: alfred-voting
        image: whujin11e/public:azure_voting_app
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 250m
            memory: 256Mi
        ports:
        - containerPort: 80
---
# Load Balancer Service for Voting App
apiVersion: v1
kind: Service
metadata:
  name: voting-service
spec:
  type: LoadBalancer
  ports:
  - port: 80
  selector:
    app: votingapp-azure
