Part_2/azure-vote.yaml
# azure-vote.yaml

# Deployment of Redis
apiVersion: apps/v1
kind: Deployment
metadata:
  name: az-redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis-azure
  template:
    metadata:
      labels:
        app: redis-azure
    spec:
      volumes:
        - name: red-vol
          csi:
            driver: file.csi.azure.com
            readOnly: false
            volumeAttributes:
              secretName: storage-secret  # required
              shareName: b7d-redis-fileshare  # required
      containers:
      - name: redis
        image: redis:latest
        args: ["--requirepass", "$(REDIS_PWD)"]
        volumeMounts:
        - name: red-vol
          mountPath: /data
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 250m
            memory: 256Mi
        ports:
        - containerPort: 6379
          name: redis
---
# Service for Redis (Cluster IP)
apiVersion: v1
kind: Service
metadata:
  name: redis-service
spec: # Par default le type est ClusterIP, il n'y a aucun raison de le spécifier (type: ClusterIP)
  ports:
  - port: 6379
  selector:
    app: redis-azure
---
# Deployment of Voting App
apiVersion: apps/v1
kind: Deployment
metadata:
  name: az-voteapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: votingapp-azure
  template:
    metadata:
      labels:
        app: votingapp-azure
    spec:
      nodeSelector:
        "kubernetes.io/os": linux
      containers:
      - name: alfred-voting
        image: simplonasa/azure_voting_app:v1.0.11
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 250m
            memory: 256Mi
        ports:
        - containerPort: 80
---
# Load Balancer Service for Voting App
apiVersion: v1
kind: Service
metadata:
  name: voting-service
spec:
  type: LoadBalancer
  ports:
  - port: 80
  selector:
    app: votingapp-azure

---
# # PV creation
# apiVersion: v1
# kind: PersistentVolume
# metadata:
#   name: redis-pv
# spec:
#   capacity:
#     storage: 5Gi
#   accessModes:
#     - ReadWriteMany
#   persistentVolumeReclaimPolicy: Retain
#   storageClassName: azurefile-csi
#   csi:
#     driver: file.csi.azure.com
#     readOnly: false
#     volumeHandle: unique-volumeid
#     volumeAttributes:
#       resourceGroup: b7duna
#       shareName: b7d-redis-fileshare
#     nodeStageSecretRef:
#       name: storage-secret
#       namespace: default
#   mountOptions:
#     - dir_mode=0777
#     - file_mode=0777
#     - uid=0
#     - gid=0
#     - mfsymlinks
#     - cache=strict # https://linux.die.net/man/8/mount.cifs
#     - nosharesock
#     - nobrl
